# njupt_score_pusher

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/njupt_score_pusher/: __main__.py  app.py  njupt_eas.py  njupt_sso.py  njupt_web_vpn.py
src/njupt_score_pusher/pusher/: common.py  entity.py  registry.py  telegram.py
