[tool.poetry]
name = "njupt-score-pusher"
version = "0.1.0"
description = ""
authors = ["ArcticLampyrid <ArcticLampyrid@outlook.com>"]
readme = "README.md"
packages = [{include = "njupt_score_pusher", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
ddddocr = "^1.4.11"
requests = "^2.31.0"
pycryptodome = "^3.20.0"
dacite = "^1.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
njupt-score-pusher = "njupt_score_pusher.__main__:main"
